2009-05-05  Thomas Moulard  <thomas.moulard@gmail.com>

	Predeclare functions to remove some warnings.
	* src/roboptim-core-cfsqp-plugin.cc: Here.

2009-05-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Update NEWS.
	* NEWS: Here.

2009-05-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix makeBound call.
	* tests/hs071.hh: Here.

2009-05-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Add a disclaimer in the documentation about CFSQP license.
	* src/doc.hh: Here.

2009-05-03  Thomas Moulard  <thomas.moulard@gmail.com>

	* .gitignore,
	* AUTHORS,
	* COPYING,
	* INSTALL,
	* Makefile.am,
	* NEWS,
	* README,
	* bootstrap,
	* build-aux/autotest.at,
	* build-aux/autotest.mk,
	* build-aux/bootstrap,
	* build-aux/init.mk,
	* build-aux/roboptim-core.m4,
	* build-aux/warning.m4,
	* configure.ac,
	* doc/Doxyfile.in,
	* doc/Makefile.am,
	* doc/doxygen.css,
	* doc/footer.html,
	* doc/header.html,
	* doc/package.css,
	* doc/sf-upload.sh.in,
	* doc/tabs.css,
	* include/Makefile.am,
	* include/roboptim/core/plugin/cfsqp.hh,
	* src/Makefile.am,
	* src/cfsqp.c,
	* src/cfsqpusr.h,
	* src/doc.hh,
	* src/qld.c,
	* src/roboptim-core-cfsqp-plugin.cc,
	* tests/Makefile.am,
	* tests/atlocal.in,
	* tests/cfsqp.stdout,
	* tests/common.hh,
	* tests/hs071.hh,
	* tests/ipopt-test.stdout,
	* tests/package.m4.in,
	* tests/plugin.cc,
	* tests/plugin.stdout,
	* tests/simple.cc,
	* tests/simple.stdout,
	* tests/testsuite.at: Import from roboptim-core.