@@ -26,6 +26,11 @@ check_PROGRAMS += plugin
 plugin_SOURCES = plugin.cc $(COMMON_SOURCES)
 plugin_LDADD = $(ROBOPTIMCORE_LIBS)
 
+# Optimization problem 1
+check_PROGRAMS += optimization-problem-1
+optimization_problem_1_SOURCES = optimization-problem-1.cc $(COMMON_SOURCES)
+optimization_problem_1_LDADD = $(ROBOPTIMCORE_LIBS)
+
 
 .PHONY: generate-reference
 
@@ -50,4 +55,5 @@ generate-reference:
 # Distribute reference files.
 EXTRA_DIST +=					\
 	simple.stdout				\
-	plugin.stdout
+	plugin.stdout				\
+	optimization-problem-1.stdout
